<resources>
    <string name="app_name">Internship Project</string>
    <string name="we_are_electric">#We are Electric</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="person">Person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_4">4</string>
    <string name="employee_productivity_dashboard">Employee Productivity Dashboard</string>
    <string name="productivity_on_monday">Productivity on Monday</string>
    <string name="_4_">4%</string>
    <string name="productivity_on_wednesday">Productivity on Wednesday</string>
    <string name="productivity_on_tueday">Productivity on Tueday</string>
    <string name="productivity_on_thursday">Productivity on Thursday</string>
    <string name="productivity_on_friday">Productivity on Friday</string>
    <string name="productivity_on_saturday">Productivity on Saturday</string>
    <string name="search_with_name">Search with name</string>
</resources>