<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/login"
        android:layout_marginTop="160dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_are_electric"
        android:layout_marginTop="17dp"
        android:textColor="#36A546CC"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/logEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_design"
        android:elevation="15dp"
        android:paddingStart="15dp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:layout_marginTop="49dp"
        android:hint="@string/e_mail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/logPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_design"
        android:elevation="15dp"
        android:paddingStart="15dp"
        android:lines="1"
        android:inputType="numberPassword"
        android:layout_marginTop="25dp"
        android:hint="Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        tools:ignore="Autofill,RtlSymmetry"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:background="@drawable/btn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="47dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textColor="#36A546"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/forgot_password"/>


</LinearLayout>