<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Fragment.HomeFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#5E5E5E82">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/employee_name"
                android:gravity="center"
                android:text="@string/employee_productivity_dashboard"
                android:textColor="@color/white"
                android:textSize="18sp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productivity_on_monday"
                    android:layout_marginTop="42dp"
                    android:layout_marginStart="31dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text1"
                    android:layout_marginTop="42dp"
                    android:textColor="#36A546"
                    android:textSize="14sp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginStart="130dp"
                    android:text="@string/_4_"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="4"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="31dp"
                    android:layout_below="@id/text1"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/my_progress"
                    style="?android:attr/progressBarStyleHorizontal"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productivity_on_tueday"
                    android:layout_marginTop="21dp"
                    android:layout_marginStart="31dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text2"
                    android:layout_marginTop="21dp"
                    android:textColor="#36A546"
                    android:textSize="14sp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginStart="140dp"
                    android:text="92"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="50"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="31dp"
                    android:layout_below="@id/text2"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/my_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productivity_on_wednesday"
                    android:layout_marginTop="21dp"
                    android:layout_marginStart="31dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text3"
                    android:layout_marginTop="21dp"
                    android:textColor="#36A546"
                    android:textSize="14sp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginStart="100dp"
                    android:text="122%"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="80"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="31dp"
                    android:layout_below="@id/text3"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/my_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productivity_on_thursday"
                    android:layout_marginTop="21dp"
                    android:layout_marginStart="31dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text4"
                    android:layout_marginTop="21dp"
                    android:textColor="#36A546"
                    android:textSize="14sp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginStart="120dp"
                    android:text="93%"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="55"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="31dp"
                    android:layout_below="@id/text4"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/my_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productivity_on_friday"
                    android:layout_marginTop="21dp"
                    android:layout_marginStart="31dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text5"
                    android:layout_marginTop="21dp"
                    android:textColor="#36A546"
                    android:textSize="14sp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginStart="140dp"
                    android:text="89%"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="65"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="31dp"
                    android:layout_below="@id/text5"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/my_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/productivity_on_saturday"
                    android:layout_marginTop="21dp"
                    android:layout_marginStart="31dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/text6"
                    android:layout_marginTop="21dp"
                    android:textColor="#36A546"
                    android:textSize="14sp"
                    android:layout_marginEnd="47dp"
                    android:layout_marginStart="120dp"
                    android:text="98%"/>

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="69"
                    android:layout_marginStart="31dp"
                    android:layout_marginEnd="31dp"
                    android:layout_below="@id/text6"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/my_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_marginBottom="70dp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>